--- a/js_face_detection_camera.html
+++ b/js_face_detection_camera.html
@@ -11,13 +11,9 @@
     Click <b>Start/Stop</b> button to start or stop the camera capture.<br>
     The <b>videoInput</b> is a &lt;video&gt; element used as face detector input.
     The <b>canvasOutput</b> is a &lt;canvas&gt; element used as face detector output.<br>
-    The code of &lt;textarea&gt; will be executed when video is started.
-    You can modify the code to investigate more.
 </p>
 <div>
 <div class="control"><button id="startAndStop" disabled>Start</button></div>
-<textarea class="code" rows="29" cols="80" id="codeEditor" spellcheck="false">
-</textarea>
 </div>
 <p class="err" id="errorMessage"></p>
 <div>
@@ -47,59 +43,13 @@
 <script src="https://webrtc.github.io/adapter/adapter-5.0.4.js" type="text/javascript"></script>
 <script src="utils.js" type="text/javascript"></script>
 <script id="codeSnippet" type="text/code-snippet">
-let video = document.getElementById('videoInput');
-let src = new cv.Mat(video.height, video.width, cv.CV_8UC4);
-let dst = new cv.Mat(video.height, video.width, cv.CV_8UC4);
-let gray = new cv.Mat();
-let cap = new cv.VideoCapture(video);
-let faces = new cv.RectVector();
-let classifier = new cv.CascadeClassifier();
 
-// load pre-trained classifiers
-classifier.load('haarcascade_frontalface_default.xml');
-
-const FPS = 30;
-function processVideo() {
-    try {
-        if (!streaming) {
-            // clean and stop.
-            src.delete();
-            dst.delete();
-            gray.delete();
-            faces.delete();
-            classifier.delete();
-            return;
-        }
-        let begin = Date.now();
-        // start processing.
-        cap.read(src);
-        src.copyTo(dst);
-        cv.cvtColor(dst, gray, cv.COLOR_RGBA2GRAY, 0);
-        // detect faces.
-        classifier.detectMultiScale(gray, faces, 1.1, 3, 0);
-        // draw faces.
-        for (let i = 0; i < faces.size(); ++i) {
-            let face = faces.get(i);
-            let point1 = new cv.Point(face.x, face.y);
-            let point2 = new cv.Point(face.x + face.width, face.y + face.height);
-            cv.rectangle(dst, point1, point2, [255, 0, 0, 255]);
-        }
-        cv.imshow('canvasOutput', dst);
-        // schedule the next one.
-        let delay = 1000/FPS - (Date.now() - begin);
-        setTimeout(processVideo, delay);
-    } catch (err) {
-        utils.printError(err);
-    }
-};
 
 // schedule the first one.
 setTimeout(processVideo, 0);
 </script>
 <script type="text/javascript">
 let utils = new Utils('errorMessage');
-
-utils.loadCode('codeSnippet', 'codeEditor');
 
 let streaming = false;
 let videoInput = document.getElementById('videoInput');
@@ -122,7 +72,7 @@ function onVideoStarted() {
     startAndStop.innerText = 'Stop';
     videoInput.width = videoInput.videoWidth;
     videoInput.height = videoInput.videoHeight;
-    utils.executeCode('codeEditor');
+    startProcessing();
 }
 
 function onVideoStopped() {
@@ -131,9 +81,71 @@ function onVideoStopped() {
     startAndStop.innerText = 'Start';
 }
 
+var xml;
+
+function startProcessing() {
+    let video = document.getElementById('videoInput');
+    let mat = new cv.Mat(video.height, video.width, cv.CV_8UC1);
+    var canvas = document.getElementById('canvasOutput');
+    canvas.width = video.width;
+    canvas.height = video.height;
+    let gray = new Uint8Array(video.width * video.height);
+    let ctx = canvas.getContext('2d');
+    let faces = new cv.RectVector();
+    let classifier = new cv.CascadeClassifier();
+
+    // load pre-trained classifiers
+    classifier.load(xml);
+
+    const FPS = 30;
+    function processVideo() {
+        try {
+            if (!streaming) {
+                // clean and stop.
+                mat.delete();
+                faces.delete();
+                classifier.delete();
+                return;
+            }
+            let begin = Date.now();
+            // start processing.
+            ctx.drawImage(video, 0, 0, video.width, video.height);
+            rgbaToGray(ctx.getImageData(0, 0, video.width, video.height).data, gray);
+            mat.data.set(gray);
+            // detect faces.
+            let minSize = {width: 0, height: 0};
+            classifier.detectMultiScale(mat, faces, 1.1, 3, 0, minSize, mat.size());
+            // draw faces.
+            drawResults(ctx, faces, 'red', mat.size());
+            // schedule the next one.
+            let delay = 1000/FPS - (Date.now() - begin);
+            setTimeout(processVideo, delay);
+        } catch (err) {
+            utils.printError(err);
+        }
+    };
+
+    setTimeout(processVideo, 0);
+}
+
+function rgbaToGray(src, dst) {
+    for (let i = 0, j = 0; i < src.length; i += 4, j += 1) {
+      dst[j] = (src[i] * 77 + src[i + 1] * 150 + src[i + 2] * 29) >> 8;
+    }
+}
+
+function drawResults(ctx, results, color, size) {
+    for (let i = 0; i < results.size(); ++i) {
+        let rect = results.get(i);
+        ctx.lineWidth = 3;
+        ctx.strokeStyle = color;
+        ctx.strokeRect(rect.x, rect.y, rect.width, rect.height);
+    }
+}
+
 utils.loadOpenCv(() => {
-    let faceCascadeFile = 'haarcascade_frontalface_default.xml';
-    utils.createFileFromUrl(faceCascadeFile, faceCascadeFile, () => {
+    utils.loadFileFromUrl('./haarcascade_frontalface_default.xml', (respnose) => {
+        xml = respnose;
         startAndStop.removeAttribute('disabled');
     });
 });
