--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Face Detection Camera Example</title>
-<link href="js_example_style.css" rel="stylesheet" type="text/css" />
+<title>OpenCV.js objdetect example</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<h2>Face Detection Camera Example</h2>
+<h2>OpenCV.js objdetect example</h2>
 <p>
     Click <b>Start/Stop</b> button to start or stop the camera capture.<br>
     The <b>videoInput</b> is a &lt;video&gt; element used as face detector input.
