--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </table>
 </div>
 <script src="https://webrtc.github.io/adapter/adapter-5.0.4.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js" type="text/javascript"></script>
 <script src="utils.js" type="text/javascript"></script>
 <script id="codeSnippet" type="text/code-snippet">
 
@@ -79,6 +80,7 @@ function onVideoStopped() {
 }
 
 let classifier;
+let stats;
 
 function startProcessing() {
     let video = document.getElementById('videoInput');
@@ -97,9 +99,9 @@ function startProcessing() {
                 // clean and stop.
                 mat.delete();
                 faces.delete();
-                classifier.delete();
                 return;
             }
+            stats.begin();
             let begin = Date.now();
             // start processing.
             ctx.drawImage(video, 0, 0, video.width, video.height);
@@ -110,6 +112,7 @@ function startProcessing() {
             classifier.detectMultiScale(mat, faces, 1.1, 3, 0, minSize, mat.size());
             // draw faces.
             drawResults(ctx, faces, 'red', mat.size());
+            stats.end();
             // schedule the next one.
             let delay = 1000/FPS - (Date.now() - begin);
             setTimeout(processVideo, delay);
@@ -136,6 +139,17 @@ function drawResults(ctx, results, color, size) {
     }
 }
 
+function initGUI() {
+    startAndStop.removeAttribute('disabled');
+
+    stats = new Stats();
+    stats.showPanel(0);
+    document.body.appendChild(stats.domElement);
+    stats.domElement.style.position = 'absolute';
+    stats.domElement.style.right = '0px';
+    stats.domElement.style.top = '0px';
+}
+
 utils.loadOpenCv(() => {
     const cascadeFileUrl = './haarcascade_frontalface_default.xml';
     utils.loadFileFromUrl(cascadeFileUrl, (xml) => {
@@ -145,7 +159,7 @@ utils.loadOpenCv(() => {
             classifier.load(xml);
             document.getElementById('status').innerText =
                 'Succeed to load haar cascade file ' + cascadeFileUrl;
-            startAndStop.removeAttribute('disabled');
+            initGUI();
         } catch (err) {
             utils.printError(err);
         }
